# fastami

./: CHANGELOG.md  README.md  _tasks.py  pyproject.toml
.github/workflows/: test-and-lint.yml
docs/: conf.py  index.rst
docs/modules/: index.rst
examples/: README.rst
fastami/: __init__.py  fastami.py  fastsmi.py  utils.py
tests/: test_fastami.py  test_fastsmi.py  test_utils.py
